--- a/GraphQLTest/GraphQLTest/appsettings.json
+++ b/GraphQLTest/GraphQLTest/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "PostgresConfig": {
-    "ConnectionString": "Server=127.0.0.1;Port=5432;Database=EmployeeGraphQL;User Id=postgres;Password=root;"
+    "ConnectionString": "Server=127.0.0.1;Port=5432;Database=EmployeeGraphQL;User Id=postgres;Password=kbpf;"
   },
   "AllowedHosts": "*"
 }
